--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="inner">
             <div class="menu">
                 <figure>
-                    <a href="#"><img src="../projectnew/img/Group.svg" alt="logo"></a>
+                    <a href="#"><img src="/img/Group.svg" alt="logo"></a>
                 </figure>
                 <nav class="menu__text">
                     <ul>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="subscribe__img">
                     <figure>
-                        <a href="#"><img src="../projectnew/img/headp.png" alt="picture"></a>
+                        <a href="#"><img src="/img/headp.png" alt="picture"></a>
                     </figure>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                         <p class="subtext">Send your problem: take a<br>photo, copy & paste<br>instructions or attach files.</p>
                     </div>
                     <figure>
-                        <img src="../projectnew/img/simbol.svg" alt="simbol">
+                        <img src="/img/simbol.svg" alt="simbol">
                     </figure>
                     <div class="comments__container__text__chars">
                         <div class="comments__container__text__chars__first">
@@ -102,7 +102,7 @@
                 </div>
                 <div class="comments__container__img">
                     <figure>
-                        <img src="../projectnew/img/phone.jpg" alt="comments">
+                        <img src="/img/phone.jpg" alt="comments">
                     </figure>
                 </div>
                 <div class="comments__container__text">
@@ -115,7 +115,7 @@
                         <p class="subtext">Get a video with a<br>solution explained in<br>in details within an hour!</p>
                     </div>
                     <figure>
-                        <img class="simb2" src="../projectnew/img/simbol3.svg" alt="simbol">
+                        <img class="simb2" src="/img/simbol3.svg" alt="simbol">
                     </figure>
                 </div>
             </div>
@@ -127,21 +127,21 @@
             <div class="better-container">
                 <div class="better-subcont">
                     <figure>
-                        <img src="../projectnew/img/storm.svg" alt="storm">
+                        <img src="/img/storm.svg" alt="storm">
                     </figure>
                     <h3>Faster</h3>
                     <p>No need to schedule and wait for live sessions with tutors.</p>
                 </div>
                 <div class="better-subcont">
                     <figure>
-                        <img src="../projectnew/img/money.svg" alt="money">
+                        <img src="/img/money.svg" alt="money">
                     </figure>
                     <h3>Cheaper</h3>
                     <p>No need to pay for the whole hour to understand a small problem.</p>
                 </div>
                 <div class="better-subcont">
                     <figure>
-                        <img src="../projectnew/img/comment.svg" alt="comment">
+                        <img src="/img/comment.svg" alt="comment">
                     </figure>
                     <h3>At hand</h3>
                     <p>Get back to the video any time and chat with a tutor on the go.</p>
@@ -160,21 +160,21 @@
             <div class="submit__text">
                 <div class="submit__text__items">
                     <div>
-                        <img src="../projectnew/img/submit.svg" alt="submit">
+                        <img src="/img/submit.svg" alt="submit">
                         <h4>Up to 10-minute long video</h4>
                     </div>
                     <div>
-                        <img src="../projectnew/img/submit.svg" alt="submit">
+                        <img src="/img/submit.svg" alt="submit">
                         <h4>Step by step problem solving</h4>
                     </div>
                 </div>
                 <div class="submit__text__items">
                     <div>
-                        <img src="../projectnew/img/submit.svg" alt="submit">
+                        <img src="/img/submit.svg" alt="submit">
                         <h4>Done on digital whiteboard</h4>
                     </div>
                     <div>
-                        <img src="../projectnew/img/submit.svg" alt="submit">
+                        <img src="/img/submit.svg" alt="submit">
                         <h4>Voice comments from a tutor</h4>
                     </div>
                 </div>
@@ -189,19 +189,19 @@
                 <div class="tutors-subitems">
                     <p class="subtext">Statistics</p>
                     <figure>
-                        <a href="#"><img src="../projectnew/img/stat.jpg" alt="picture"></a>
+                        <a href="#"><img src="/img/stat.jpg" alt="picture"></a>
                     </figure>
                 </div>
                 <div class="tutors-subitems">
                     <p class="subtext">Chemistry</p>
                     <figure>
-                        <a href="#"><img src="../projectnew/img/chemistry.jpg" alt="picture"></a>
+                        <a href="#"><img src="/img/chemistry.jpg" alt="picture"></a>
                     </figure>
                 </div>
                 <div class="tutors-subitems">
                     <p class="subtext">Economics</p>
                     <figure>
-                        <a href="#"><img src="../projectnew/img/economics.jpg" alt="picture"></a>
+                        <a href="#"><img src="/img/economics.jpg" alt="picture"></a>
                     </figure>
                 </div>
             </div>
@@ -255,7 +255,7 @@
 <footer>
     <section class="outer">
         <div class="inner privacy">
-            <a href="#"><img src="../projectnew/img/logo2.svg" alt="logo"></a>
+            <a href="#"><img src="/img/logo2.svg" alt="logo"></a>
             <nav class="privacy-text">
                 <ul>
                     <li>
