--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <p class="subtext">Chat with your tutor for the<br>next 24 hours to clarify any<br>questions.</p>
                     </div>
                     <figure>
-                        <img class="simb" src="../projectnew/img/simbol2.svg" alt="simbol">
+                        <img class="simb" src="/ForME1/img/simbol2.svg" alt="simbol">
                     </figure>
                 </div>
                 <div class="comments__container__img">
